--- a/ngs.1.html
+++ b/ngs.1.html
@@ -29,7 +29,7 @@
 <p>This project contains the language part which is under development. The interactive part will be dealt with later. This manual covers both implemented and unimplemented parts.</p>
 <h1 id="motivation-and-background">MOTIVATION AND BACKGROUND</h1>
 <p>NGS tries to fill the void between outdated shells such as <strong>bash</strong> and generic programming languages such as <strong>Ruby</strong>, <strong>Python</strong>, <strong>Perl</strong>, <strong>Go</strong>. The shells are domain-specific languages but the domain has changed so they are not a good fit for the job. Generic languages on the other hand are not domain-specific so they are not good as shells and too verbose for system tasks scripting, also not a good fit.</p>
-<h2 id="motivation---fix-current-shell-syntax">Motivation - fix current shell syntax</h2>
+<h2 id="fix-current-shell-syntax">Fix current shell syntax</h2>
 <p>Since conventional shells were first designed just to run commands and only later extended to be a programming languages while keeping syntax compatibility, the syntax is inconvenient. Examples:</p>
 <ul>
 <li>bash - <code>while some command;do ... done</code>. NGS - <code>while $(some command) ...</code></li>
@@ -37,11 +37,11 @@
 <li>bash - <code>my_command &quot;$var&quot;</code>, ngs - <code>my_command $var</code>.</li>
 <li>bash - <code>my_command $var</code>, ngs - <code>my_command $*var</code> (zero or more arguments, equals to the number of elements in the <code>$var</code> array).</li>
 </ul>
-<h2 id="motivation---fix-current-language-design">Motivation - fix current language design</h2>
+<h2 id="fix-current-language-design">Fix current language design</h2>
 <ul>
 <li>For example, one can not simply set a variable defined outside while with code inside the while (because of sub-shell): <code>a=1; cat /dev/null | while true;do a=2;break; done; echo $a</code> - prints <strong>1</strong>.</li>
 </ul>
-<h2 id="motivation---cloud-support">Motivation - Cloud support</h2>
+<h2 id="cloud-support">Cloud support</h2>
 <p>Bash was meant to manage one machine.</p>
 <ul>
 <li>There is no built-in support for managing multiple servers.</li>
