--- a/ngssyn.1.html
+++ b/ngssyn.1.html
@@ -144,7 +144,7 @@ r = switch 1 {
     expr2 code2
     ...
 }</code></pre>
-<p>Similar to <code>switch</code> but the code is evaluated when <code>match(value_expr, exprN)</code>.</p>
+<p>Similar to <code>switch</code> but the code is evaluated when <code>match(value_expr, exprN)</code> is true.</p>
 <pre><code>cond {
     expr1 code1
     expr2 code2
