--- a/ngs.1.html
+++ b/ngs.1.html
@@ -76,6 +76,10 @@
 <td align="left"><a href="ngstyp.1.html">ngstyp(1)</a></td>
 <td align="left">NGS language pre-defined types</td>
 </tr>
+<tr class="even">
+<td align="left"><a href="ngsmethods.1.html">ngsmethods(1)</a></td>
+<td align="left">NGS language pre-defined methods</td>
+</tr>
 </tbody>
 </table>
 <h1 id="thanks">THANKS</h1>
