--- a/ngsmethods.1.html
+++ b/ngsmethods.1.html
@@ -30,6 +30,7 @@
 <h2 id="strrreal"><code>Str(r:Real)</code></h2>
 <h2 id="strnint"><code>Str(n:Int)</code></h2>
 <h2 id="strttype"><code>Str(t:Type)</code></h2>
+<h3 id="description">Description</h3>
 <pre><code>Unfinished</code></pre>
 <h2 id="strrexclusiverange"><code>Str(r:ExclusiveRange)</code></h2>
 <h2 id="strrinclusiverange"><code>Str(r:InclusiveRange)</code></h2>
@@ -85,8 +86,10 @@
 <h2 id="arrarr-rangerange"><code>[](arr:Arr, range:Range)</code></h2>
 <h1 id="attrs"><code>attrs</code></h1>
 <h2 id="attrsmnativemethod"><code>attrs(m:NativeMethod)</code></h2>
+<h3 id="description-1">Description</h3>
 <pre><code>Gets native method attribues. Usually a Hash with name and doc keys.</code></pre>
 <h2 id="attrsmnativemethod-datumany"><code>attrs(m:NativeMethod, datum:Any)</code></h2>
+<h3 id="description-2">Description</h3>
 <pre><code>Sets native method attribues. Should be a Hash.</code></pre>
 <h2 id="attrscclosure"><code>attrs(c:Closure)</code></h2>
 <h2 id="attrscclosure-datumany"><code>attrs(c:Closure, datum:Any)</code></h2>
@@ -135,17 +138,17 @@
 <h2 id="inherittnormaltype-parentnormaltype"><code>inherit(t:NormalType, parent:NormalType)</code></h2>
 <h1 id="typeof"><code>typeof</code></h1>
 <h2 id="typeofxany"><code>typeof(x:Any)</code></h2>
-<pre><code>Returns type of the given instance
-
-x:Any
-    Instance (an object)</code></pre>
+<h3 id="description-3">Description</h3>
+<pre><code>Returns type of the given instance</code></pre>
+<h3 id="parameter-xany">Parameter x:Any</h3>
+<pre><code>Instance (an object)</code></pre>
 <h1 id="c_dup2"><code>c_dup2</code></h1>
 <h2 id="c_dup2oldfdint-newfdint"><code>c_dup2(oldfd:Int, newfd:Int)</code></h2>
 <h2 id="c_dup2oldfdint-newfdint-1"><code>c_dup2(oldfd:Int, newfd:Int)</code></h2>
 <h1 id="c_open"><code>c_open</code></h1>
 <h2 id="c_openpathnamestr-flagsstr"><code>c_open(pathname:Str, flags:Str)</code></h2>
-<pre><code>flags:Str
-    r - O_RDONLY; w - O_WRONLY | O_CREAT | O_TRUNC; a - O_WRONLY | O_CREAT | O_APPEND</code></pre>
+<h3 id="parameter-flagsstr">Parameter flags:Str</h3>
+<pre><code>r - O_RDONLY; w - O_WRONLY | O_CREAT | O_TRUNC; a - O_WRONLY | O_CREAT | O_APPEND</code></pre>
 <h1 id="c_close"><code>c_close</code></h1>
 <h2 id="c_closefdint"><code>c_close(fd:Int)</code></h2>
 <h1 id="c_read"><code>c_read</code></h1>
@@ -154,8 +157,8 @@ x:Any
 <h2 id="c_writefdint-sstr"><code>c_write(fd:Int, s:Str)</code></h2>
 <h1 id="c_lseek"><code>c_lseek</code></h1>
 <h2 id="c_lseekfdint-offsetint-whencestr"><code>c_lseek(fd:Int, offset:Int, whence:Str)</code></h2>
-<pre><code>whence:Str
-    One of: set, cur, end</code></pre>
+<h3 id="parameter-whencestr">Parameter whence:Str</h3>
+<pre><code>One of: set, cur, end</code></pre>
 <h1 id="c_isatty"><code>c_isatty</code></h1>
 <h2 id="c_isattyfdint"><code>c_isatty(fd:Int)</code></h2>
 <h1 id="c_exit"><code>c_exit</code></h1>
@@ -249,8 +252,16 @@ x:Any
 <h2 id="global_not_found_hooknamestr"><code>global_not_found_hook(name:Str)</code></h2>
 <h1 id="init"><code>init</code></h1>
 <h2 id="initeexception"><code>init(e:Exception)</code></h2>
+<h3 id="returns">Returns</h3>
+<pre><code>Exception with .backtrace attribute</code></pre>
 <h2 id="initeexception-sstr"><code>init(e:Exception, s:Str)</code></h2>
+<h3 id="parameter-sstr">Parameter s:Str</h3>
+<pre><code>Goes into .info</code></pre>
+<h3 id="returns-1">Returns</h3>
+<pre><code>Exception with .backtrace and .info</code></pre>
 <h2 id="initeexception-causeexception"><code>init(e:Exception, cause:Exception)</code></h2>
+<h3 id="returns-2">Returns</h3>
+<pre><code>Exception with .backtrace and .cause</code></pre>
 <h2 id="initeindexnotfound-messagestr-containerany-keyany"><code>init(e:IndexNotFound, message:Str, container:Any, key:Any)</code></h2>
 <h2 id="initrrange-startany-endany"><code>init(r:Range, start:Any, end:Any)</code></h2>
 <h2 id="initffstdlibfirstfound-iint"><code>init(ff:StdlibFirstFound, i:Int)</code></h2>
@@ -262,29 +273,47 @@ x:Any
 <h2 id="initsstats"><code>init(s:Stats)</code></h2>
 <h1 id="to_exit_code"><code>to_exit_code</code></h1>
 <h2 id="to_exit_codexany"><code>to_exit_code(x:Any)</code></h2>
+<h3 id="returns-3">Returns</h3>
+<pre><code>Always 0</code></pre>
 <h2 id="to_exit_codebbool"><code>to_exit_code(b:Bool)</code></h2>
+<h3 id="returns-4">Returns</h3>
+<pre><code>0 for true, 1 for false </code></pre>
 <h2 id="to_exit_codenint"><code>to_exit_code(n:Int)</code></h2>
+<h3 id="returns-5">Returns</h3>
+<pre><code>n</code></pre>
 <h2 id="to_exit_codepprocess"><code>to_exit_code(p:Process)</code></h2>
 <h1 id="bootstrap_find_ngs_dir"><code>bootstrap_find_ngs_dir</code></h1>
 <h2 id="bootstrap_find_ngs_dir-1"><code>bootstrap_find_ngs_dir()</code></h2>
 <h1 id="fetch"><code>fetch</code></h1>
-<h2 id="fetchfnameany"><code>fetch(fname:Any)</code></h2>
+<h2 id="fetchfnamestr"><code>fetch(fname:Str)</code></h2>
+<h3 id="description-4">Description</h3>
+<pre><code>Fetches whole file</code></pre>
+<h3 id="parameter-fnamestr">Parameter fname:Str</h3>
+<pre><code>File name to fetch</code></pre>
+<h3 id="returns-6">Returns</h3>
+<pre><code>Whole file as a string</code></pre>
 <h1 id="require"><code>require</code></h1>
-<h2 id="requirefnameany"><code>require(fname:Any)</code></h2>
+<h2 id="requirefnamestr"><code>require(fname:Str)</code></h2>
+<h3 id="description-5">Description</h3>
+<pre><code>Runs the given file</code></pre>
+<h3 id="returns-7">Returns</h3>
+<pre><code>Typically whatever the last expression in the file evaluates to</code></pre>
 <h1 id="bootstrap"><code>bootstrap</code></h1>
 <h2 id="bootstrap-1"><code>bootstrap()</code></h2>
+<h3 id="description-6">Description</h3>
+<pre><code>Main entry point. Executed on NGS boot.</code></pre>
 <h1 id="identity"><code>identity</code></h1>
 <h2 id="identityxany"><code>identity(x:Any)</code></h2>
 <h1 id="partial"><code>partial</code></h1>
 <h2 id="partialffun-bind_argsarr"><code>partial(f:Fun, *bind_args:Arr)</code></h2>
-<pre><code>Returns partially-applied function
-
-f:Fun
-    The base function
-*bind_args:Arr
-    The arguments to bind the function to</code></pre>
+<h3 id="description-7">Description</h3>
+<pre><code>Returns partially-applied function</code></pre>
+<h3 id="parameter-ffun">Parameter f:Fun</h3>
+<pre><code>The base function</code></pre>
 <h1 id="partial_tail"><code>partial_tail</code></h1>
 <h2 id="partial_tailffun-bind_argsarr"><code>partial_tail(f:Fun, *bind_args:Arr)</code></h2>
+<h3 id="description-8">Description</h3>
+<pre><code>Same as partial() but the bound arguments are last ones</code></pre>
 <h1 id="expose"><code>expose</code></h1>
 <h2 id="exposechildnormaltype-attrstr"><code>expose(child:NormalType, attr:Str)</code></h2>
 <h1 id="section-15"><code>..</code></h1>
@@ -402,8 +431,10 @@ f:Fun
 <h1 id="parse"><code>parse</code></h1>
 <h2 id="parsesstr"><code>parse(s:Str)</code></h2>
 <h2 id="parsesstr-hintshash"><code>parse(s:Str, hints:Hash)</code></h2>
+<h3 id="description-9">Description</h3>
 <pre><code>Returns the string as is</code></pre>
 <h2 id="parsesstr-hintshash-1"><code>parse(s:Str, hints:Hash)</code></h2>
+<h3 id="description-10">Description</h3>
 <pre><code>Parses JSON, continues with other implementations if fails.</code></pre>
 <h2 id="parsesstr-hintshash-2"><code>parse(s:Str, hints:Hash)</code></h2>
 <h1 id="section-21"><code>````</code></h1>
