Rename ngsmethods file to ngsmet

--- a/ngs.1.html
+++ b/ngs.1.html
@@ -77,7 +77,7 @@
 <td align="left">NGS language pre-defined types</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="ngsmethods.1.html">ngsmethods(1)</a></td>
+<td align="left"><a href="ngsmet.1.html">ngsmet(1)</a></td>
 <td align="left">NGS language pre-defined methods</td>
 </tr>
 </tbody>
