--- a/ngsmet.1.html
+++ b/ngsmet.1.html
@@ -17,7 +17,7 @@
 <h3 class="date">2016</h3>
 </div>
 <h1 id="name">NAME</h1>
-<p>ngsmethods - Next Generation Shell built-in and standard library methods.</p>
+<p>ngsmet - Next Generation Shell built-in and standard library methods.</p>
 <p>This page is work in progress and is now at very early stage.</p>
 <h1 id="section"><code>!=</code></h1>
 <h2 id="aany-bany"><code>!=(a:Any, b:Any)</code></h2>
